[gd_scene load_steps=4 format=3 uid="uid://ccr2b4l3vk816"]

[ext_resource type="Script" path="res://scripts/start_menu.gd" id="1_30gxv"]
[ext_resource type="Texture2D" uid="uid://bstoxnco4nsql" path="res://art/Designer.png" id="2_aly7r"]

[sub_resource type="Theme" id="Theme_2nqsl"]

[node name="startMenu" type="CenterContainer"]
modulate = Color(1, 0.941176, 1, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_2nqsl")
script = ExtResource("1_30gxv")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("2_aly7r")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(300, 200)
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_font_sizes/font_size = 47
text = "Mystic Realms"
horizontal_alignment = 1

[node name="startGame" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Start Game"

[node name="controlsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Controls"

[node name="aboutButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "About"

[node name="quitGame" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Quit Game"

[connection signal="pressed" from="VBoxContainer/startGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="VBoxContainer/aboutButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/quitGame" to="." method="_on_quit_game_pressed"]
